加入更多日志输出

--- a/step5.html
+++ b/step5.html
@@ -90,7 +90,7 @@
             //随机旋转，用于打乱魔方
             function randomRotate(){
             	if(!isRotating&&!isAutoReset){
-            		var stepNum = 10;
+            		var stepNum = 20;
 	            	var funcArr = [R,U,F,B,L,D,r,u,f,b,l,d];
 	            	var stepArr = [];
 	            	for(var i=0;i<stepNum;i++){
@@ -106,7 +106,27 @@
 	            							stepArr[6](0,function(){
 	            								stepArr[7](0,function(){
 	            									stepArr[8](0,function(){
-	            										stepArr[9](0)
+	            										stepArr[9](0,function(){
+	            											stepArr[10](0,function(){
+											            		stepArr[11](0,function(){
+											            			stepArr[12](0,function(){
+											            				stepArr[13](0,function(){
+											            					stepArr[14](0,function(){
+											            						stepArr[15](0,function(){
+											            							stepArr[16](0,function(){
+											            								stepArr[17](0,function(){
+											            									stepArr[18](0,function(){
+											            										stepArr[19](0)
+											            									})
+											            								})
+											            							})	
+											            						})
+											            					})
+											            				})
+											            			})
+											            		})
+											            	})
+	            										})
 	            									})
 	            								})
 	            							})	
@@ -116,6 +136,7 @@
 	            			})
 	            		})
 	            	})
+	            	
             	}
             }
 
@@ -141,7 +162,7 @@
             }
             //第八步 顶角归位
             function step8(){
-                console.log('run step8');
+                console.log('run step8 '+checkStep8()+' '+isRotating);
 
                 if(checkStep8()){
                     isAutoReset = false;
@@ -268,6 +289,7 @@
                     var xLine = rotateAxisByYLine(XLine,rotateNum);
                     if(getFaceColorByVector(cube2,xLine)==getFaceColorByVector(cube20,xLine)&&
                         getFaceColorByVector(cube2,xLine)!=getFaceColorByVector(cube11,xLine)){
+                    	console.log('step8Case1');
                         rotate801(rotateNum);
                     }
                 }
@@ -287,13 +309,14 @@
                         getFaceColorByVector(cube11,xLine)==getFaceColorByVector(cube20,xLine)&&
                         getFaceColorByVector(cube0,zLine)!=getFaceColorByVector(cube1,zLine)&&
                         getFaceColorByVector(cube20,xLine)!=getFaceColorByVector(cube20,xLine)){
+                    	console.log('step8Case2');
                         rotate802(rotateNum);
                     }
                 }
             }
             //第七步 顶棱归位
             function step7(){
-                console.log('run step7');
+                console.log('run step7 '+checkStep7()+' '+isRotating);
 
             	if(checkStep7()){
                     console.log('start step8');
@@ -336,7 +359,7 @@
                     if(getFaceColorByVector(cube1,zLine)!=zLine4Color&&
                         zLine4Color==getFaceColorByVector(cube11,xLine)&&
                         zLine4Color!=getFaceColorByVector(cube14,xLine)){
-                        //FFUrLFFRlUFF
+                        console.log('step7Case1');
                         F(rotateNum,function(){
                             F(rotateNum,function(){
                                 U(rotateNum,function(){
@@ -376,7 +399,7 @@
                     if(zLine1Color!=getFaceColorByVector(cube4,zLine)&&
                         zLine1Color==getFaceColorByVector(cube14,xLine)&&
                         zLine1Color!=getFaceColorByVector(cube11,xLine)){
-                        //FFurLFFRluFF
+                        console.log('step7Case2');
                         F(rotateNum,function(){
                             F(rotateNum,function(){
                                 u(rotateNum,function(){
@@ -429,7 +452,7 @@
             }
             //第六步 顶角面位
             function step6(){
-                console.log('run step6');
+                console.log('run step6 '+checkStep6()+' '+isRotating);
 
             	if(checkStep6()){
                     console.log('start step7');
@@ -508,11 +531,14 @@
             		var xLine = rotateAxisByYLine(XLine,rotateNum);
             		if(getFaceColorByVector(cube0,zLine)==topColor&&
             			getFaceColorByVector(cube2,xLine)==topColor){
+            			console.log('step6Case1-1');
             			rotate601(rotateNum);
             		}else if(getFaceColorByVector(cube2,zLine)==topColor&&
             			getFaceColorByVector(cube20,xLine)==topColor){
+            			console.log('step6Case1-2');
             			rotate602(rotateNum);
             		}else if(getFaceColorByVector(cube0,zLine)==topColor){
+            			console.log('step6Case1-3');
             			rotate603(rotateNum);
             		}
             	}
@@ -537,7 +563,7 @@
             }
             //第五步 顶棱面位
             function step5(){
-                console.log('run step5');
+                console.log('run step5 '+checkStep5()+' '+isRotating);
 
             	if(checkStep5()){
                     console.log('start step6');
@@ -615,6 +641,7 @@
 	            		getFaceColorByVector(cube19,yLine)==topColor&&
 	            		getFaceColorByVector(cube1,zLine)==topColor&&
 	            		getFaceColorByVector(cube11,xLine)==topColor){
+	            		console.log('step5Case1');
 	            		rotate501(rotateNum);
 	            	}
             	}
@@ -632,6 +659,7 @@
 	            		getFaceColorByVector(cube1,yLine)==topColor&&
 	            		getFaceColorByVector(cube19,yLine)==topColor&&
 	            		getFaceColorByVector(cube11,xLine)==topColor){
+	            		console.log('step5Case2');
 	            		rotate501(rotateNum);
 	            	}
             	}
@@ -648,6 +676,7 @@
 	            	if(getFaceColorByVector(cube10,yLine)==topColor&&
 	            		getFaceColorByVector(cube1,zLine)==topColor&&
 	            		getFaceColorByVector(cube11,xLine)==topColor){
+	            		console.log('step5Case3');
 	            		rotate501(rotateNum,function(){
 	            			U(rotateNum,function(){
 	            				rotate502(rotateNum);
@@ -679,7 +708,7 @@
             }
             //第四步 中棱归位
             function step4(){
-                console.log('run step4');
+                console.log('run step4 '+checkStep4()+' '+isRotating);
 
             	if(checkStep4()){
                     console.log('start step5');
@@ -776,6 +805,7 @@
                             xLine11Color==getFaceColorByVector(cube14,xLine)&&
                             (getFaceColorByVector(cube5,zLine)!=yLine11Color||
                             getFaceColorByVector(cube5,xLine)!=xLine11Color)){
+                        	console.log('step4Case1And2-1');
                             rotate401(rotateNum);
                         }else if(yLine11Color==getFaceColorByVector(cube22,zLineAd)&&
                             xLine11Color==getFaceColorByVector(cube14,xLine)&&
@@ -785,8 +815,10 @@
                             if(rotateNum>=4){
                                 rotateNum = 0;
                             }
+                            console.log('step4Case1And2-2');
                             rotate402(rotateNum);
                         }else{
+                        	console.log('step4Case1And2-3');
                             u(rotateNum,function(){
                                 rotateNum++;
                                 if(rotateNum>=4){
@@ -808,6 +840,7 @@
             		var zLine = rotateAxisByYLine(ZLine,rotateNum);
                     if(getFaceColorByVector(cube4,zLine)==getFaceColorByVector(cube5,xLine)&&
                         getFaceColorByVector(cube5,zLine)==getFaceColorByVector(cube14,xLine)){
+                    	console.log('step4Case3');
                         rotate401(rotateNum,function(){
                             U(rotateNum,function(){
                                 U(rotateNum,function(){
@@ -916,7 +949,7 @@
             }
             //第三步底角归位
             function step3(){
-                console.log('run step3');
+                console.log('run step3 '+checkStep3()+' '+isRotating);
 
             	if(checkStep3()){
                     console.log('start step4');
@@ -977,12 +1010,14 @@
                             getFaceColorByVector(cube7,zLine)==zLine2Color&& 
                             getFaceColorByVector(cube14,xLine)==yLine2Color&&
                             getFaceColorByVector(cube17,xLine)==yLine2Color){
+                        	console.log('step3Case1-1');
                             R(rotateNum,function(){
                                 U(rotateNum,function(){
                                     r(rotateNum)
                                 })
                             })
                         }else{
+                        	console.log('step3Case1-2');
                             u(rotateNum,function(){
                                 rotateNum++;
                                 if(rotateNum>=4){
@@ -1029,12 +1064,14 @@
                             getFaceColorByVector(cube7,zLine)==yLine2Color&&
                             getFaceColorByVector(cube14,xLine)==xLine2Color&&
                             getFaceColorByVector(cube17,xLine)==xLine2Color){
+                        	console.log('step3Case2-1');
                             f(rotateNum,function(){
                                 u(rotateNum,function(){
                                     F(rotateNum)
                                 })
                             })
                         }else{
+                        	console.log('step3Case2-3');
                             u(rotateNum,function(){
                                 rotateNum++;
                                 if(rotateNum>=4){
@@ -1082,6 +1119,7 @@
             			    getFaceColorByVector(cube4,zLine)==xLine2Color&&
             			    getFaceColorByVector(cube7,zLine)==xLine2Color){
                             //转换为第二种情况
+                            console.log('step3Case3-1');
             			   	f(rotateNum,function(){
             			   		u(rotateNum,function(){
             			   			u(rotateNum,function(){
@@ -1092,6 +1130,7 @@
             			   		})
             			   	})
             			}else{
+            				console.log('step3Case3-2');
         					u(rotateNum,function(){
                                 rotateNum++;
                                 if(rotateNum>=4){
@@ -1134,6 +1173,7 @@
                         	getFaceColorByVector(cube4,zLine)==yLineAd8Color&&
                         	getFaceColorByVector(cube7,zLine)==yLineAd8Color){
 	                        //转换为第一种情况
+	                        console.log('step3Case4-1');
 	                        f(rotateNum,function(){
 	                            U(rotateNum,function(){
 	                                F(rotateNum)
@@ -1141,6 +1181,7 @@
 	                        })
                     	}else{
                     		//转换为第三种情况
+                    		console.log('step3Case4-2');
                     		f(rotateNum,function(){
                     			u(rotateNum,function(){
                     				F(rotateNum)
@@ -1170,6 +1211,7 @@
                         	getFaceColorByVector(cube14,xLine)==yLineAd8Color&&
                         	getFaceColorByVector(cube17,xLine)==yLineAd8Color){
 	                        //转换为第二种情况
+	                        console.log('step3Case5-1');
 	                        f(rotateNum,function(){
 	                            u(rotateNum,function(){
 	                                F(rotateNum,function(){
@@ -1179,6 +1221,7 @@
 	                        })
                     	}else{
                     		//转换为第三种情况
+                    		console.log('step3Case5-2');
                     		R(rotateNum,function(){
                     			u(rotateNum,function(){
                     				r(rotateNum)
@@ -1233,7 +1276,7 @@
             }
             //第二步底棱归位
             function step2(){
-                console.log('run step2');
+                console.log('run step2 '+checkStep2()+' '+isRotating);
 
             	if(checkStep2(true)){
                     console.log('start step3');
@@ -1271,10 +1314,12 @@
 
             		if(getFaceColorByVector(cube1,yLine)==bottomColor){
 	            		if(getFaceColorByVector(cube1,zLine)==getFaceColorByVector(cube4,zLine)){
+	            			console.log('step2Case1-1');
                             F(rotateNum,function(){
                                 F(rotateNum);
                             });
 	            		}else{
+	            			console.log('step2Case1-2');
 	            			u(rotateNum,function(){
                                 rotateNum++;
                                 if(rotateNum>=4){
@@ -1297,12 +1342,14 @@
                 	if(getFaceColorByVector(cube7,yLineAd)==bottomColor&&
                 		getFaceColorByVector(cube8,yLineAd)==bottomColor){
                         if(getCubeByIndex(cube2,xLine)!=bottomColor){
+                        	console.log('step2Case2-1');
                             R(rotateNum,function(){
                                 u(rotateNum,function(){
                                     r(rotateNum);
                                 });
                             })
                         }else{
+                        	console.log('step2Case2-2');
                             f(rotateNum,function(){
                                 u(rotateNum,function(){
                                     F(rotateNum);
@@ -1323,12 +1370,14 @@
                 	if(getFaceColorByVector(cube7,yLineAd)==bottomColor&&
                 		getFaceColorByVector(cube6,yLineAd)==bottomColor){
                         if(getFaceColorByVector(cube0,xLineAd)!=bottomColor){
+                        	console.log('step2Case3-1');
                             l(rotateNum,function(){
                                 u(rotateNum,function(){
                                     L(rotateNum)
                                 });
                             })
                         }else{
+                        	console.log('step2Case3-2');
                             f(rotateNum,function(){
                                 u(rotateNum,function(){
                                     F(rotateNum);
@@ -1421,7 +1470,7 @@
             }
             //第一步小白花
             function step1(){
-                console.log('run step1');
+                console.log('run step1 '+checkStep1()+' '+isRotating);
             	/**
             	 * 找到初始化时上表面颜色在中心的面，调整魔方让该表面依然为上表面；
             	 * 然后对照初始化时下表面颜色的位置，按既定规律转动魔方；
@@ -1487,8 +1536,10 @@
 
 	            	if(getFaceColorByVector(cube3,zLine)==bottomColor){//101、107
 						if(getFaceColorByVector(cube9,yLine)!=bottomColor){
+							console.log('step1Case1-1');
 							l(rotateNum);
 						}else{
+							console.log('step1Case1-2');
 							u(rotateNum);
 						}
 					}
@@ -1505,8 +1556,10 @@
 
             		if(getFaceColorByVector(cube5,zLine)==bottomColor){
 						if(getFaceColorByVector(cube11,yLine)!=bottomColor){
+							console.log('step1Case2-1');
 							R(rotateNum);
 						}else{
+							console.log('step1Case2-2');
 							u(rotateNum);
 						}
 					}
@@ -1524,8 +1577,10 @@
 
             		if(getFaceColorByVector(cube15,yLineAd)==bottomColor){//103、104
 						if(getFaceColorByVector(cube9,yLine)!=bottomColor){
+							console.log('step1Case3-1');
 							l(rotateNum);
 						}else{
+							console.log('step1Case3-2');
 							u(rotateNum);
 						}
 					}
@@ -1542,8 +1597,10 @@
 
             		if(getFaceColorByVector(cube1,zLine)==bottomColor||getFaceColorByVector(cube7,zLine)==bottomColor){//105、106
 						if(getFaceColorByVector(cube1,yLine)!=bottomColor){
+							console.log('step1Case4-1');
 							F(rotateNum);
 						}else{
+							console.log('step1Case4-2');
 							D(rotateNum)
 						}
 					}
