移动端日志输出组件 使用在线资源

--- a/step5.html
+++ b/step5.html
@@ -44,7 +44,7 @@
             <li><p class="error"></p></li>
     	</ul>
         <div id="canvas-frame"></div>
-        <script src="node_modules/eruda/eruda.min.js"></script>
+        <script src="//cdn.bootcss.com/eruda/1.4.2/eruda.min.js"></script>
 		<script>eruda.init();</script>
         <script>
             var renderer;//渲染器
