--- a/step5.html
+++ b/step5.html
@@ -1546,6 +1546,7 @@
             	var zLine = rotateAxisByYLine(ZLine,rotateNum);
             	var xLineAd = rotateAxisByYLine(XLineAd,rotateNum);
             	normalize = zLine;
+            	console.log(rotateNum);
             	rotateMove(cube2,xLineAd,next);
             }
             function u(rotateNum,next){
@@ -1555,6 +1556,7 @@
             	var xLine = rotateAxisByYLine(XLine,rotateNum);
             	var zLineAd = rotateAxisByYLine(ZLineAd,rotateNum);
             	normalize = xLine;
+            	console.log(rotateNum);
             	rotateMove(cube2,zLineAd,next);
             }
             function F(rotateNum,next){
@@ -1564,6 +1566,7 @@
             	var xLine = rotateAxisByYLine(XLine,rotateNum);
             	var yLineAd = rotateAxisByYLine(YLineAd,rotateNum);
             	normalize = xLine;
+            	console.log(rotateNum);
             	rotateMove(cube2,yLineAd,next);
             }
             function f(rotateNum,next){
@@ -1573,6 +1576,7 @@
             	var yLine = rotateAxisByYLine(YLine,rotateNum);
             	var xLineAd = rotateAxisByYLine(XLineAd,rotateNum);
             	normalize = yLine;
+            	console.log(rotateNum);
             	rotateMove(cube2,xLineAd,next)
             }
             function L(rotateNum,next){
@@ -1582,6 +1586,7 @@
             	var zLine = rotateAxisByYLine(ZLine,rotateNum);
             	var yLineAd = rotateAxisByYLine(YLineAd,rotateNum);
             	normalize = zLine;
+            	console.log(rotateNum);
             	rotateMove(cube0,yLineAd,next);
             }
             function l(rotateNum,next){
@@ -1591,6 +1596,7 @@
             	var yLine = rotateAxisByYLine(YLine,rotateNum);
             	var zLineAd = rotateAxisByYLine(ZLineAd,rotateNum);
             	normalize = yLine;
+            	console.log(rotateNum);
             	rotateMove(cube0,zLineAd,next);
             }
             function D(rotateNum,next){
@@ -1600,6 +1606,7 @@
             	var xLine = rotateAxisByYLine(XLine,rotateNum);
             	var zLineAd = rotateAxisByYLine(ZLineAd,rotateNum);
             	normalize = xLine;
+            	console.log(rotateNum);
             	rotateMove(cube8,zLineAd,next);
             }
             function d(rotateNum,next){
@@ -1609,6 +1616,7 @@
             	var zLine = rotateAxisByYLine(ZLine,rotateNum);
             	var xLineAd = rotateAxisByYLine(XLineAd,rotateNum);
             	normalize = zLine;
+            	console.log(rotateNum);
             	rotateMove(cube8,xLineAd,next);
             }
             function R(rotateNum,next){
@@ -1618,6 +1626,7 @@
             	var yLine = rotateAxisByYLine(YLine,rotateNum);
             	var zLineAd = rotateAxisByYLine(ZLineAd,rotateNum);
             	normalize = yLine;
+            	console.log(rotateNum);
             	rotateMove(cube2,zLineAd,next);
             }
             function r(rotateNum,next){
@@ -1627,6 +1636,7 @@
             	var zLine = rotateAxisByYLine(ZLine,rotateNum);
             	var yLineAd = rotateAxisByYLine(YLineAd,rotateNum);
             	normalize = zLine;
+            	console.log(rotateNum);
             	rotateMove(cube2,yLineAd,next);
             }
             function B(rotateNum,next){
@@ -1636,6 +1646,7 @@
                 var xLine = rotateAxisByYLine(XLine,rotateNum);
                 var yLine = rotateAxisByYLine(YLine,rotateNum);
                 normalize = xLine;
+                console.log(rotateNum);
                 rotateMove(cube20,yLine,next);
             }
             function b(rotateNum,next){
@@ -1645,6 +1656,7 @@
                 var xLine = rotateAxisByYLine(XLine,rotateNum);
                 var yLineAd = rotateAxisByYLine(YLineAd,rotateNum);
                 normalize = xLine;
+                console.log(rotateNum);
                 rotateMove(cube20,yLineAd,next);
             }
             /**
